# pycookbook

./: .gitignore  CONVENTIONS.md  Makefile  README.md  STRUCTURE.md  pycookbook-目录设计.md  pyproject.toml  python-cookbook-目录设计.md  requirements.txt  习惯约定.md
01_language/01_basic/01_string/: 01_create.py  02_format.py  03_methods.py  04_slice.py  05_encode.py  README.md
01_language/01_basic/02_repr/: 01_repr_str.py  02_print.py  03_pprint.py  04_id_hash.py  README.md
01_language/02_advanced/01_module_dunders/: 00_description.py  01_overview.py  README.md
01_language/02_advanced/02_reflection/: 01_getattr_family.py  02_introspection.py  03_magic_attrs.py  04_inspect.py  README.md
01_language/02_advanced/03_iterables/: 01_protocol.py  02_generator_func.py  03_generator_expr.py  04_yield_from.py  05_async_generator.py  README.md
01_language/02_advanced/04_functions/: 01_higher_order.py  02_lambda.py  03_closure.py  04_decorator.py  05_decorator_args.py  06_class_decorator.py  07_star_unpack.py  README.md
01_language/02_advanced/05_context_manager/: 01_protocol.py  02_contextmanager.py  03_contextlib_tools.py  README.md
03_stdlib/01_argparse/: 00_description.py  01_basic.py  02_types_default.py  03_actions.py  04_nargs_choices.py  05_groups.py  06_subcommands.py  07_help_customization.py  08_advanced.py  README.md
03_stdlib/02_pathlib/: 00_description.py  01_basic.py  02_navigate.py  03_query.py  04_read_write.py  05_operations.py  README.md
03_stdlib/03_shutil/: 00_description.py  01_copy.py  02_move_remove.py  03_archive.py  04_disk_which.py  README.md
03_stdlib/04_json/: 00_description.py  01_basic.py  02_format.py  03_custom_types.py  04_hooks.py  05_pitfalls.py  README.md
03_stdlib/05_os/: 01_path.py  02_dir_ops.py  03_file_ops.py  04_env.py  05_process.py  README.md
03_stdlib/06_sys/: 01_info.py  02_path_modules.py  03_io.py  04_argv_exit.py  05_internals.py  README.md
03_stdlib/07_subprocess/: 01_run.py  02_output.py  03_popen.py  04_pipe.py  05_advanced.py  README.md
03_stdlib/08_importlib/: 01_import_module.py  02_util.py  03_metadata.py  04_resources.py  README.md
03_stdlib/08_importlib/_demo_pkg/: __init__.py
03_stdlib/09_concurrency/: README.md
03_stdlib/09_concurrency/01_threading/: 01_thread.py  02_lock.py  03_event_condition.py  04_queue.py
03_stdlib/09_concurrency/02_multiprocessing/: 01_process.py  02_pool.py  03_queue_pipe.py  04_shared_memory.py
03_stdlib/09_concurrency/03_asyncio/: 01_coroutine.py  02_task_gather.py  03_queue_sync.py  04_streams.py
03_stdlib/09_concurrency/04_futures/: 01_thread_pool.py  02_process_pool.py  03_as_completed.py
03_stdlib/10_itertools/: 01_infinite.py  02_finite.py  03_combinatoric.py  README.md
03_stdlib/11_functools/: 01_partial.py  02_wraps.py  03_lru_cache.py  04_reduce.py  05_singledispatch.py  README.md
05_frameworks/01_quant/01_vnpy/: README.md
05_frameworks/01_quant/02_godzilla/: README.md
06_extending/02_native_ext/01_pybind11/: 00_description.py  01_basic.py  02_class.py  03_inheritance.py  04_stl.py  05_numpy.py  06_exceptions.py  07_callbacks.py  08_advanced.py  README.md  _build.py  _cmake_build.py
06_extending/02_native_ext/01_pybind11/01_basic/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/02_class/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/03_inheritance/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/03_inheritance/src/: pb_inherit.cpp
06_extending/02_native_ext/01_pybind11/04_stl/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/05_numpy/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/06_exceptions/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/07_callbacks/: CMakeLists.txt  demo.py
06_extending/02_native_ext/01_pybind11/08_advanced/: CMakeLists.txt  demo.py
07_backend/01_web/: README.md
07_backend/01_web/01_flask/: 00_description.py  01_hello.py  02_routing.py  03_request_response.py  04_blueprint_error.py  README.md
07_backend/01_web/02_fastapi/: 00_description.py  01_hello.py  02_routing.py  03_request_response.py  04_pydantic_depends.py  README.md
07_backend/01_web/03_tornado/: 00_description.py  01_hello.py  02_routing.py  03_request_response.py  04_coroutine.py  README.md
07_backend/01_web/04_sanic/: 00_description.py  01_hello.py  02_routing.py  03_request_response.py  04_middleware_blueprint.py  README.md  _curl_selftest.py
08_data/: 00_description.py  README.md
08_data/01_analysis/: 00_description.py  README.md
08_data/01_analysis/01_numpy/: 00_description.py  01_create.py  02_index_slice.py  03_reshape_axis.py  04_ufunc_broadcast.py  05_aggregation.py  06_random.py  07_linalg.py  08_advanced.py  README.md
08_data/05_storage/01_parquet/: 00_description.py  01_basic.py  02_pyarrow_api.py  03_schema.py  04_filters_append.py  README.md
08_data/05_storage/02_file_formats/: 01_formats.py  02_benchmark.py  README.md
08_data/05_storage/02_file_formats/01_formats/: 01_csv.py  02_json.py  03_excel.py  04_parquet.py  05_feather.py  06_hdf5.py  07_pickle.py  08_numpy.py  README.md
10_ops/03_packaging/01_pyproject_toml/: 00_description.py  README.md
10_ops/03_packaging/01_pyproject_toml/01_minimal/: Makefile  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/02_dependencies/: Makefile  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/03_entry_points/: Makefile  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/03_entry_points/src/mypkg/: cli.py
10_ops/03_packaging/01_pyproject_toml/04_tool_config/: Makefile  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/05_build_backends/01_setuptools/: Makefile  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/05_build_backends/02_hatchling/: commands.sh  pyproject.toml
10_ops/03_packaging/01_pyproject_toml/05_build_backends/03_flit/: commands.sh  pyproject.toml
10_ops/03_packaging/02_setup_py/: 00_description.py  README.md
10_ops/03_packaging/02_setup_py/04_migrate/: pyproject.toml  setup.py
10_ops/08_profiling/: 01_cprofile.py  README.md
(+23 files in other folders)
