# 与同目录 setup.py 等价的现代写法
[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "mypkg"
version         = "0.1.0"
description     = "一句话描述"
requires-python = ">=3.10"
dependencies    = ["requests>=2.28", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
mypkg = "mypkg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
