[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "mypkg"
requires-python = ">=3.10"
dynamic         = ["version"]

[tool.setuptools.dynamic]
version = {attr = "mypkg.__version__"}  # 从 src/mypkg/__init__.py 读

[tool.setuptools.packages.find]
where   = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
mypkg = ["data/*.json", "py.typed"]
