[build-system]
requires      = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name            = "mypkg"
requires-python = ">=3.10"
dynamic         = ["version", "description"]

# flit 约定：
#   version     从 src/mypkg/__init__.py 的 __version__ 读取
#   description 从 src/mypkg/__init__.py 的模块 docstring 读取
# 无需任何 [tool.flit.*] 配置
